# Ide_AI

./: .gitignore  AI_PARTNER_SELECTOR_SPEC.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT_HANDOFF.md  DEPLOYMENT_RAILWAY.md  FEATURE_SPEC.md  MODULAR_PATHWAY_IMPLEMENTATION_PROMPT.md  MODULAR_PATHWAY_SPEC.md  PRD.md  PRODUCT_DESCRIPTION.md  PROMPT_SEQUENCE.md  SYSTEM_PROMPT.md  concept_categories.seed.json  docker-compose.yml  env.example  module_library.seed.json  project_templates.seed.json
backend/: .env.example  Dockerfile  project_templates.seed.json  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/alembic/: env.py
backend/app/core/: __init__.py  clerk.py  config.py  database.py  oauth.py  security.py
backend/app/models/: __init__.py  block.py  concept_branch.py  design_sheet.py  email_verification.py  external_integration.py  idea_inbox.py  market_analysis.py  module_artifact.py  module_pathway.py  module_response.py  password_reset.py  pipeline_node.py  project.py  project_share.py  project_snapshot.py  project_template.py  prompt_kit.py  session.py  share_comment.py  share_rating.py  sprint_plan.py  user.py  user_memory.py  version.py
backend/app/pathways/: __init__.py  base.py  brand_identity.py  creative_writing.py  marketing_campaign.py  software_product.py
backend/app/routers/: auth.py  billing.py  blocks.py  branching.py  clerk_webhook.py  design_sheet.py  discovery.py  exports.py  inbox.py  integrations.py  library.py  market.py  meta.py  module_pathway.py  modules.py  pathways.py  (+7 more)
backend/tests/: test_partner_style.py
(+180 files in other folders)
