[project]
name = "ide-ai-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "PromptMonster",email = "info@apmonster.ai"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "anthropic (>=0.84.0,<0.85.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fpdf2 (>=2.8.7,<3.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.7,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
